Add new features and improvements to the SkyBlock module
Introduce challenges, island upgrades (fly, keep inventory), island bank, and improved island management with new GUI elements.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: e8a06aa7-3465-42e9-a318-ad15bbb51d0d
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: 95d0f7c5-85f0-41c4-a6f5-7eca8fa69c1d
Replit-Helium-Checkpoint-Created: true